# python-troveclient-stubs

./: README.md  pyproject.toml
troveclient-stubs/: auth_plugin.pyi  base.pyi  client.pyi  common.pyi  extension.pyi  service_catalog.pyi  shell.pyi  utils.pyi
troveclient-stubs/apiclient/: auth.pyi  base.pyi  client.pyi
troveclient-stubs/v1/: client.pyi  instances.pyi
